--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-13.1
+resolver: lts-14.14
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -39,15 +39,8 @@ packages:
 - .
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: 
-- brick-0.46
-# - itemfield-1.2.5.0
-# - cursor-0.0.0.1
-
-- config-ini-0.2.4.0
-- data-clist-0.1.2.2
-- text-zipper-0.10.1
-- word-wrap-0.4.1
+# extra-deps: 
+  # - pkg-ver
 
 # Override default flag values for local packages and extra-deps
 flags: {}
